# BT

./: .gitignore  CHANGE_LOG.md  README.md  docker-compose-build.yml  docker-compose.yml
android/: CHANGE_LOG.md  README.md  build.gradle  gradle.properties  settings.gradle  start.sh
android/app/: build.gradle
android/btimlibs/: build.gradle
android/daogenerator/: build.gradle
android/gradle/wrapper/: gradle-wrapper.properties
android/mgimlibs/: build.gradle
auto_setup/: setup.sh
auto_setup/gcc_setup/: gcc_setup.sh
auto_setup/im_server/: setup.sh
auto_setup/im_web/: setup.sh
auto_setup/im_web/conf/: im.com.conf
auto_setup/mariadb/: setup.sh
auto_setup/nginx_php/nginx/: setup.sh
auto_setup/redis/: setup.sh
doc/: api.md  协议文件说明.md  开源IM工程“蘑菇街TeamTalk”.md  消息发送.md  部署说明.md
doc/Macmini+VMWare+CentOS7.9单机手动部署文档/: README.md
doc/TeamTalkWinClient编译问题及解决方案/: README.md
doc/TeamTalk各个服务的IP配置方案/: TeamTalk各个服务的IP配置方案.md
doc/TeamTalk源码分析(张小方)/: README.md
doc/TeamTalk源码分析(张小方)/TeamTalk源码分析（一）—— TeamTalk介绍/: README.md
doc/TeamTalk源码分析(张小方)/TeamTalk源码分析（七） —— 服务器端msfs源码分析/: README.md
doc/TeamTalk源码分析(张小方)/TeamTalk源码分析（三） —— 服务器端的程序架构介绍/: README.md
doc/TeamTalk源码分析(张小方)/TeamTalk源码分析（九） —— 服务器端route_server源码分析/: README.md
doc/TeamTalk源码分析(张小方)/TeamTalk源码分析（二） —— 服务器端的程序的编译与部署/: README.md
doc/TeamTalk源码分析(张小方)/TeamTalk源码分析（五） —— 服务器端msg_server源码分析/: README.md
doc/TeamTalk源码分析(张小方)/TeamTalk源码分析（八） —— 服务器端file_server源码分析/: README.md
doc/TeamTalk源码分析(张小方)/TeamTalk源码分析（六） —— 服务器端login_server源码分析/: README.md
doc/TeamTalk源码分析(张小方)/TeamTalk源码分析（十） —— pc客户端源码分析/: README.md
doc/TeamTalk源码分析(张小方)/TeamTalk源码分析（四） —— 服务器端db_proxy_server源码分析/: README.md
doc/TeamTalk部署详细教程（最全最新TeamTalk部署教程助你一次部署成功）/: TeamTalk部署详细教程.md
doc/TeamTalk部署问题及解决方案/: README.md  TeamTalk部署问题及解决方案.md
doc/mogutt-TTServer/: README.md
doc/windows 10 Docker Desktop TeamTalk 安装笔记/: README.md
doc/服务器端编程心得(张小方)/服务器端编程心得（一）—— 主线程与工作线程的分工/: README.md
doc/服务器端编程心得(张小方)/服务器端编程心得（七）——开源一款即时通讯软件的源码/: README.md
doc/服务器端编程心得(张小方)/服务器端编程心得（三）—— 一个服务器程序的架构介绍/: README.md
doc/服务器端编程心得(张小方)/服务器端编程心得（六）—— 关于网络编程的一些实用技巧和细节/: README.md
doc/服务器端编程心得(张小方)/服务器编程心得（五）—— 如何编写高性能日志/: README.md
doc/服务器端编程心得(张小方)/服务器编程心得（四）—— 如何将socket设置为非阻塞模式/: README.md
docker/: .env  DOCKER_COMPOSE_README.md  README.md  docker-compose-build-centos.yml  docker-compose-build-centos792009.yml  docker-compose-build-openeuler.yml  docker-compose-build-openeuler2003.yml  docker-compose-build.yml  docker-compose-centos.yml  docker-compose-centos792009.yml  docker-compose-openeuler.yml  docker-compose-openeuler2003.yml  docker-compose.yml
docker/core_proxy_server/: Dockerfile  README.md  build.sh
docker/db_proxy_server/: Dockerfile  main.sh
docker/db_proxy_server/centos/: Dockerfile  build.sh
docker/db_proxy_server/centos_db_proxy_server/: Dockerfile  build.sh
docker/db_proxy_server/openeuler/: build.sh
docker/db_proxy_server/openeuler_db_proxy_server/: Dockerfile
docker/develop_server/: Dockerfile  Dockerfile.base  README.md  build_base.bat  main.sh
docker/develop_server/centos/: Dockerfile  Dockerfile.base  build_base.bat  build_develop_server.bat  build_develop_server.sh  run_develop_server.bat
docker/develop_server/centos_develop_server/: Dockerfile  Dockerfile.base  build_base.bat  build_develop_server.bat
docker/develop_server/openeuler/: build_base.bat  build_base.sh
docker/develop_server/openeuler_develop_server/: Dockerfile  Dockerfile.base  build_develop_server.sh
docker/file_server/: Dockerfile  main.sh
docker/file_server/centos/: Dockerfile  build.sh
docker/http_msg_server/: Dockerfile  main.sh
docker/login_server/: Dockerfile  main.sh
docker/mariadb_server/: README.md  docker-compose.yml
docker/msfs_server/: Dockerfile  main.sh
docker/msg_server/: Dockerfile  main.sh
docker/push_server/: Dockerfile  main.sh
docker/redis_server/: README.md
docker/route_server/: Dockerfile  main.sh
docker/web_client/: README.md  build.sh
docker/web_server/: Dockerfile  README.md  nginx  nginx.conf  php-fpm  setupweb.sh
docker/websocket_server/: Dockerfile  run.sh
ios/: BigTalk-Info.plist  CHANGE_LOG.md  Launch Screen.xib  Podfile  README.md  main.m
ios/BigTalk/: BigTalk-Prefix.pch
ios/BigTalk.xcodeproj/: project.pbxproj
ios/BigTalkTests/: BigTalkTests.m
ios/BigTalkUITests/: BigTalkUITests.m  BigTalkUITestsLaunchTests.m
ios/IOSDuoduo/: DDSearch.h  DDSearch.m  SpellLibrary.h
ios/PB/: ImFile.pbobjc.m  ImServer.pbobjc.h
ios/Pb/: ImBuddy.pbobjc.h  ImServer.pbobjc.h
ios/TeamTalk.xcodeproj/: project.pbxproj
ios/TeamTalk.xcworkspace/: contents.xcworkspacedata
mac/TeamTalk/: DDChattingContactListCell.m
mac/TeamTalk.xcodeproj/: project.pbxproj
mac_client/: Podfile
pb/: IM.BaseDefine.proto  IM.Buddy.proto  IM.File.proto  IM.Group.proto  IM.Internal.proto  IM.Login.proto  IM.Message.proto  IM.Other.proto  IM.Server.proto  IM.SwitchService.proto  README.md  create.sh  make_PB_Files.bat
pb/gem/: ImGroup.pbobjc.h  ImLogin.pbobjc.h
server/: generatevs2019.bat
server/run/: monitor.sh  restart.sh
server/src/: CMakeLists.txt  build.sh  make_hiredis.sh  make_log4cxx.sh  make_mariadb.sh  make_protobuf.sh
server/src/base/: CMakeLists.txt  ServInfo.h  ThreadPool.cpp  UtilPdu.cpp  UtilPdu.h  public_define.h  util.cpp  util.h
server/src/base/pb/protocol/: IM.BaseDefine.pb.cc  IM.Buddy.pb.h  IM.File.pb.cc  IM.File.pb.h  IM.Login.pb.h  IM.Message.pb.h  IM.Other.pb.h
server/src/base/slog/: slog_api.h
server/src/db_proxy_server/: CMakeLists.txt  CachePool.cpp  DBPool.h  SyncCenter.cpp  dbproxyserver.conf
server/src/db_proxy_server/business/: AudioModel.cpp  DepartModel.cpp  FileModel.cpp  GroupMessageModel.cpp  GroupModel.cpp  InterLogin.cpp  MessageModel.cpp  RelationModel.cpp  SessionModel.cpp  UserModel.cpp
server/src/file_server/: CMakeLists.txt
server/src/msg_server/: CMakeLists.txt  MsgConn.cpp  msg_server.cpp
server/src/route_server/: CMakeLists.txt
server/src/slog/: CMakeLists.txt  slog_api.cpp
win-cliient/solution/: teamtalk.sln
(+1383 files in other folders)
